# degiro-rs

./: .env.example  Cargo.toml  api.md
examples/: use_client.rs
src/: degiro_client.rs  error.rs  lib.rs  main.rs  types.rs  util.rs
tests/: integration.rs
