[package]
name = "degiro-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bon = "3.6.4"
dotenvy = "0.15.7"
jiff = { version = "0.2.14", features = ["serde"] }
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["json", "cookies"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
tokio = { version = "1.45.0", features = ["full"] }
totp-rs = "5.7.0"

[dev-dependencies]
simple_logger = "5.0.0"
